# HASP-2025

./: Camera.py  GuiderModule.py  Motor.py  README.md  TempSensors.py  docker-compose.yml
.devcontainer/Propeller/: devcontainer.json
.devcontainer/RPi/: devcontainer.json
Docs/: Contributing.md  Developing.md  GettingStarted.md
Docs/Propeller/Resources/: Structure.iuml
Docs/RPi/: Guidance.md
Docs/RPi/Resources/: Communication.iuml  Guidance.iuml  Structure.iuml  Tracking.iuml
HASP 24 Old/: Camera.py  Digital.py  GuiderModule.py  HASP_24.py  Utils.py  requirements.txt
HASP 24 Old/Docs/: SolSeekerMK2SearchFSM.iuml
propeller/: CMakeLists.txt  Dockerfile
rpi/: CMakeLists.txt  Dockerfile  pyproject.toml  requirements.txt
rpi/HASP_25/: HASP_25.py
rpi/HASP_25/coms/: CRC.py  SP_Comms.py  SP_PacketManager.py  bind_test.py
rpi/HASP_25/test/: SP_PacketManager_test.py
rpi/HASP_25_C/include/: test.h
rpi/HASP_25_C/src/: test.c
rpi/HASP_25_CPP/bindings/: bindings.cpp
rpi/HASP_25_CPP/include/: CRC.h
rpi/HASP_25_CPP/src/: CRC.cpp
rpi/HASP_25_RPI/: HASP_25.py  __init__.py
rpi/HASP_25_RPI/coms/: SP_Comms.py  SP_PacketManager.py  SP_Packet_Strategy.py  gps_packet.py  main.py
rpi/HASP_25_RPI/test/: SP_PacketManager_test.py
rpi/pyBind11_Bindings/: CRC_Wrapper.cpp
